--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,6 @@ chrono = { version = "0.4.19", features = ["serde"] }
 uuid = { version = "1.3.0", features = ["serde", "v4", "macro-diagnostics"] }
 mongodb = "2.3.1"
 bson = { version = "2.5.0", features = ["chrono-0_4", "serde_with", "uuid-1"] }
-
 tracing = "0.1.37"
 clap = { version = "4.1.4", features = ["derive"] }
 strum_macros = "0.24.3"
@@ -25,3 +24,4 @@ strum = { version = "0.24.1", features = ["strum_macros"] }
 thiserror = "1.0.38"
 axum-macros = "0.3.2"
 serde_with = "2.2.0"
+dotenv = "0.15.0"
