--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,5 @@ thiserror = "1.0.38"
 axum-macros = "0.3.2"
 serde_with = "2.2.0"
 dotenv = "0.15.0"
+async-recursion = "1.0.2"
+futures = "0.3.26"
