--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "version": "1.0.0",
+  "version": "1.1.0",
   "scripts": {
     "dev": "next",
     "build": "next build",
@@ -12,8 +12,8 @@
     "@emotion/react": "^11.10.6",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.17",
+    "@nanostores/react": "^0.4.1",
     "axios": "^1.3.4",
-    "nanostores": "^0.7.4",
     "next": "latest",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
