--- a/client/.env.local
+++ b/client/.env.local
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_URL=http://host.docker.internal:8080/api
+NEXT_PUBLIC_API_URL=http://localhost:8080/api
 NEXT_PUBLIC_APP_VERSION=$npm_package_version
