--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -28,3 +28,7 @@ dotenv = "0.15.0"
 async-recursion = "1.0.2"
 futures = "0.3.26"
 itertools = "0.10.5"
+
+[[bin]]
+name = "kanban-board-backend"
+path = "src/main.rs"
