--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
-    "react-spinners": "^0.13.8"
+    "react-spinners": "^0.13.8",
+    "tailwindcss": "^3.3.1"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
@@ -26,7 +27,6 @@
     "@types/react-dom": "^17.0.1",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.1",
     "typescript": "^4.8.3"
   }
 }
