--- a/client/package.json
+++ b/client/package.json
@@ -14,15 +14,16 @@
     "@heroicons/react": "^2.0.17",
     "@nanostores/react": "^0.4.1",
     "axios": "^1.3.4",
-    "next": "latest",
+    "next": "^15.3.3",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
-    "react-spinners": "^0.13.8"
+    "react-spinners": "^0.13.8",
+    "sass": "^1.91.0"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
-    "@types/react": "^17.0.2",
+    "@types/react": "17.0.88",
     "@types/react-dom": "^17.0.1",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
